# gtest-cmake-template

./: CMakeLists.txt  README.md
include/: lib.h
src/: CMakeLists.txt  lib.cpp
test/: CMakeLists.txt  lib_test.cpp
